--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "guiguicdd",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "^4.1.0",
+    "@adiwajshing/baileys": "github:adiwajshing/baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "axios": "^0.21.1",
     "cfonts": "^2.10.1",
@@ -33,8 +33,10 @@
     "image-to-base64": "^2.2.0",
     "instagram-url-downloader": "^1.1.0",
     "jimp": "^0.16.1",
+    "link-preview-js": "^2.1.13",
     "mathjs": "^10.4.3",
     "node-fetch": "^2.6.1",
+    "pino": "^7.11.0",
     "pm2": "^5.2.0",
     "qrcode-terminal": "^0.12.0",
     "remove.bg": "^1.3.0",
