--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wabase-md",
+  "name": "megumi-md",
   "version": "2.1.000",
-  "description": "Robo desenvolvido em JS para o whatsapp-md. Com suporte ao Whatsapp Legacy via Baileys",
+  "description": "Just for Fun",
   "main": "index.js",
   "directories": {
     "lib": "lib"
@@ -18,13 +18,14 @@
     "baileys",
     "bot"
   ],
-  "author": "guiguicdd",
+  "author": "4relial",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "github:adiwajshing/baileys",
+    "@adiwajshing/baileys": "^4.1.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "axios": "^0.21.1",
     "cfonts": "^2.10.1",
+    "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "genshin-db": "^4.1.1",
@@ -40,7 +41,8 @@
     "pm2": "^5.2.0",
     "qrcode-terminal": "^0.12.0",
     "remove.bg": "^1.3.0",
-    "request": "^2.88.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "sharp": "^0.29.3",
     "spinnies": "^0.5.1",
     "tiktok-scraper-without-watermark": "^1.1.3",
@@ -48,15 +50,6 @@
     "wa-sticker-formatter": "^4.3.2",
     "youtube-mp3-downloader": "^0.7.10",
     "youtube-search": "^1.1.6",
-    "ytdl-core": "^4.11.0",
-    "zerochan-scraper": "^1.2.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/guiguicdd/wabase-md.git"
-  },
-  "bugs": {
-    "url": "https://github.com/guiguicdd/wabase-md.git"
-  },
-  "homepage": "https://github.com/guiguicdd/wabase-md#readme"
+    "ytdl-core": "^4.11.0"
+  }
 }
