--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "megumi-md",
   "version": "2.1.000",
   "description": "Just for Fun",
-  "main": "start.js",
+  "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "start": "node start.js",
+    "start": "node index.js",
     "dev": "node anu.js"
   },
   "keywords": [
@@ -20,7 +20,7 @@
   "author": "4relial",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "github:adiwajshing/baileys",
+    "@adiwajshing/baileys": "github:4relial/baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "anilist-node": "^1.12.0",
     "axios": "^0.21.1",
@@ -28,28 +28,36 @@
     "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fbdownload": "^0.0.1",
     "genshin-db": "^4.1.1",
     "get-youtube-id": "^1.0.1",
     "got": "^11.8.1",
     "image-to-base64": "^2.2.0",
+    "instagram-url-direct": "^1.0.12",
     "instagram-url-downloader": "^1.1.0",
     "jimp": "^0.16.1",
     "link-preview-js": "^2.1.13",
     "mathjs": "^10.4.3",
+    "mongoose": "^6.5.4",
+    "multisort": "^0.5.3",
+    "music-lyrics": "^2.0.2",
     "node-fetch": "^2.6.1",
     "pino": "^7.11.0",
     "pm2": "^5.2.0",
+    "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "remove.bg": "^1.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
+    "rimraf": "^3.0.2",
     "spinnies": "^0.5.1",
-    "tiktok-scraper-without-watermark": "^1.1.3",
-    "trace.moe.ts": "^1.3.9",
+    "trace.moe.ts": "^1.3.10-patch1",
+    "twitter-url-direct": "^1.0.4",
     "video-converter": "^1.0.0",
     "wa-sticker-formatter": "^4.3.2",
     "youtube-mp3-downloader": "^0.7.10",
     "youtube-search": "^1.1.6",
+    "youtube-search-api": "^1.1.0",
     "ytdl-core": "^4.11.0"
   }
 }
