--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "megumi-md",
-  "version": "2.1.000",
+  "version": "2.7.000",
   "description": "Just for Fun",
   "main": "index.js",
   "directories": {
@@ -20,7 +20,7 @@
   "author": "4relial",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "github:4relial/baileys",
+    "@adiwajshing/baileys": "github:adiwajshing/baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "anilist-node": "^1.12.0",
     "axios": "^0.21.1",
@@ -29,7 +29,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fbdownload": "^0.0.1",
-    "file-type": "^16.5.3",
+    "file-type": "16.5.3",
     "genshin-db": "^4.1.1",
     "get-youtube-id": "^1.0.1",
     "got": "^11.8.1",
@@ -42,7 +42,7 @@
     "mongoose": "^6.5.4",
     "multisort": "^0.5.3",
     "music-lyrics": "^2.0.2",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "2.6.1",
     "pino": "^7.11.0",
     "pm2": "^5.2.0",
     "qr-image": "^3.2.0",
@@ -59,6 +59,6 @@
     "youtube-mp3-downloader": "^0.7.10",
     "youtube-search": "^1.1.6",
     "youtube-search-api": "^1.1.0",
-    "ytdl-core": "^4.11.0"
+    "ytdl-core": "^4.11.2"
   }
 }
