--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "4relial",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "^4.4.0",
+    "@adiwajshing/baileys": "github:4relial/baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "anilist-node": "^1.12.0",
     "axios": "^0.21.1",
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "fbdownload": "^0.0.1",
     "file-type": "16.5.3",
+    "fluent-ffmpeg": "^2.1.2",
     "genshin-db": "^4.1.1",
     "get-youtube-id": "^1.0.1",
     "got": "^11.8.1",
@@ -37,7 +38,6 @@
     "instagram-url-direct": "^1.0.12",
     "instagram-url-downloader": "^1.1.0",
     "jimp": "^0.16.1",
-    "link-preview-js": "^2.1.13",
     "mathjs": "^10.4.3",
     "mongoose": "^6.5.4",
     "multisort": "^0.5.3",
